--- a/newPortfolio2/client/package.json
+++ b/newPortfolio2/client/package.json
@@ -8,7 +8,8 @@
     "@fortawesome/react-fontawesome": "^0.1.4",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
+    "react-scripts": "3.0.1",
+    "react-scroll": "^1.7.14"
   },
   "scripts": {
     "start": "react-scripts start",
